--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ header {
 .side-nav {
   grid-area: side-nav;
   background-color: #EBEBEB;
-  padding: 10% 15% 0 12%;
+  /* padding: 10% 15% 0 12%; */
   border-right: solid 1px rgb(49, 49, 49);
   border-left: solid 1px rgb(49, 49, 49);
   border-bottom: solid 1px rgb(49, 49, 49);
@@ -41,7 +41,23 @@ header {
   font-size: 2em;
   text-decoration: none;
   color: black;
-  margin-bottom: 1em;
+  padding: 1em 1em 1em 1em;
+  border-top: solid 0.3px gray;
+}
+
+.side-nav a:last-child {
+  border-bottom: solid 0.3px gray;
+}
+
+.side-nav a:nth-child(n+3) {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.side-nav button {
+  display: block;
+  font-size: 2em;
+  margin: 1em auto 1em auto;
 }
 
 .content {
@@ -59,6 +75,6 @@ header {
   padding: 0.5em;
   margin-bottom: 0.7em;
   display: grid;
-  grid-template-columns: 6fr 1.5fr 0.5fr;
+  grid-template-columns: 0.5fr 5.5fr 1.7fr 0.5fr;
   border-radius: 0 20px 0 20px;
 }
