--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 /* COPYRIGHT */
 html {
   height: 100%;
-  font-family: Calibri, 'Gill Sans', 'Gill Sans MT','Trebuchet MS', sans-serif;
+  font-family: Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
 }
 body {
   min-height: 100%;
@@ -29,14 +29,15 @@ header {
 
 .side-nav {
   grid-area: side-nav;
-  background-color: #EBEBEB;
+  background-color: #ebebeb;
   /* padding: 10% 15% 0 12%; */
   border-right: solid 1px rgb(49, 49, 49);
   border-left: solid 1px rgb(49, 49, 49);
   border-bottom: solid 1px rgb(49, 49, 49);
 }
 
-.side-nav a, .side-nav span {
+.side-nav a,
+.side-nav span {
   display: block;
   font-size: 2em;
   text-decoration: none;
@@ -49,7 +50,7 @@ header {
   border-bottom: solid 0.3px gray;
 }
 
-.side-nav a:nth-child(n+3) {
+.side-nav a:nth-child(n + 3) {
   font-size: 1.5em;
   text-align: center;
 }
@@ -62,19 +63,46 @@ header {
 
 .content {
   grid-area: content;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   padding: 5% 0 0 7%;
   border-right: solid 1px rgb(49, 49, 49);
   border-bottom: solid 1px rgb(49, 49, 49);
 }
 
 .content .item {
+  margin-bottom: 1.5em;
+}
+
+.content .item-banner {
   font-size: 1.5em;
   width: 85%;
   border: solid 1px black;
   padding: 0.5em;
-  margin-bottom: 0.7em;
   display: grid;
-  grid-template-columns: 0.5fr 5.5fr 1.7fr 0.5fr;
-  border-radius: 0 20px 0 20px;
+  grid-template-columns: 0.5fr 4fr 1.7fr 0.5fr;
+  gap: 2%;
+}
+
+.item-banner--editing,
+.item-info--editing {
+  transition: 0.5s;
+}
+
+.item-banner--editing input,
+.item-info--expanded input {
+  font-size: 1em;
+}
+
+.content .item-info {
+  display: none;
+  font-size: 1.5em;
+  width: 85%;
+  border-bottom: solid 1px black;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  padding: 0.5em;
+}
+
+.content .item-info--expanded {
+  display: block;
 }
