--- a/src/style.css
+++ b/src/style.css
@@ -44,6 +44,11 @@ header {
   color: black;
   padding: 1em 1em 1em 1em;
   border-top: solid 0.3px gray;
+  transition: 0.5s;
+}
+
+.side-nav a:hover {
+  background-color: #c3c3c3;
 }
 
 .side-nav a:last-child {
@@ -57,8 +62,10 @@ header {
 
 .side-nav button {
   display: block;
-  font-size: 2em;
+  font-size: 1.5em;
   margin: 1em auto 1em auto;
+  padding: 1em;
+  background-color: #23CE6B;
 }
 
 .content {
@@ -69,13 +76,15 @@ header {
   border-bottom: solid 1px rgb(49, 49, 49);
 }
 
-.content .item {
+.item {
   margin-bottom: 1.5em;
+  animation: appear 0.7s;
+  width: 90%;
 }
 
-.content .item-banner {
+.item-banner {
+  background-color: white;
   font-size: 1.5em;
-  width: 85%;
   border: solid 1px black;
   padding: 0.5em;
   display: grid;
@@ -93,16 +102,29 @@ header {
   font-size: 1em;
 }
 
-.content .item-info {
+.item-info {
+  background-color: white;
   display: none;
   font-size: 1.5em;
-  width: 85%;
   border-bottom: solid 1px black;
   border-left: solid 1px black;
   border-right: solid 1px black;
-  padding: 0.5em;
+  padding: 1em 1em 0 1em;
 }
 
-.content .item-info--expanded {
-  display: block;
+.item-info--expanded {
+  display: grid;
+  grid: 1fr 1fr 1fr 3fr/ 1fr 4fr;
+  gap: 0.7em 0.5em;
+}
+
+.item-info button {
+  font-size: 1em;
+  margin: 0.5em 1em 1em 0;
+  padding: 0.5em 1em;
+}
+
+@keyframes appear {
+  0% {transform: scale(1,0);}
+  100% {}
 }
