--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,7 @@ header {
   font-size: 1.5em;
   margin: 1em auto 1em auto;
   padding: 1em;
-  background-color: #23CE6B;
+  background-color: #23ce6b;
 }
 
 .content {
@@ -103,7 +103,7 @@ header {
   font-size: 1em;
 }
 
-input[type="radio"] {
+input[type='radio'] {
   display: none;
 }
 
@@ -115,7 +115,7 @@ input[type="radio"] {
 }
 
 input[type='radio']:checked + label {
-  background-color: #E79988;
+  background-color: #e79988;
 }
 
 .item-info {
@@ -132,6 +132,7 @@ input[type='radio']:checked + label {
   display: grid;
   grid: 1fr 1fr 1fr 3fr/ 1fr 4fr;
   gap: 0.7em 0.5em;
+  animation: fade-in 0.8s;
 }
 
 .item-info button {
@@ -141,6 +142,13 @@ input[type='radio']:checked + label {
 }
 
 @keyframes appear {
-  0% {transform: scale(1,0);}
-  100% {}
+  0% {
+    transform: scale(1, 0);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0%;
+  }
 }
