--- a/src/style.css
+++ b/src/style.css
@@ -49,10 +49,13 @@ header h1 {
 .side-nav {
   grid-area: side-nav;
   background-color: #ebebeb;
-  /* padding: 10% 15% 0 12%; */
   border-right: solid 1px rgb(49, 49, 49);
   border-left: solid 1px rgb(49, 49, 49);
   border-bottom: solid 1px rgb(49, 49, 49);
+}
+
+#all-items {
+  border-bottom: solid 0.3px gray;
 }
 
 .side-nav a,
@@ -62,7 +65,6 @@ header h1 {
   text-decoration: none;
   color: black;
   padding: 1em 1em 1em 1em;
-  border-top: solid 0.3px gray;
   transition: 0.5s;
 }
 
@@ -74,7 +76,8 @@ header h1 {
   border-bottom: solid 0.3px gray;
 }
 
-.side-nav a:nth-child(n + 3) {
+.side-nav :nth-child(n + 3) {
+  border-top: solid 0.3px gray;
   font-size: 1.5em;
   text-align: center;
 }
@@ -83,23 +86,43 @@ header h1 {
   background-color: #c3c3c3;
 }
 
-#add-new-item {
-  display: block;
-  font-size: 1.5em;
-  margin: 1em auto 1em auto;
-  padding: 1em;
-  background-color: #F8D48B;
-}
-
 .content {
   grid-area: content;
   background-color: #f5f5f5;
-  padding: 5% 0 0 7%;
   border-right: solid 1px rgb(49, 49, 49);
   border-bottom: solid 1px rgb(49, 49, 49);
 }
 
+.tab-panel {
+  height: 12%;
+  background-color: white;
+  border-bottom: solid 1px rgb(49, 49, 49);
+  border-right: solid 1px rgb(49, 49, 49);
+  margin-bottom: 1em;
+  font-size: 2em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  place-items: center ;
+}
+
+.add-new-item,
+.add-new-project {
+  background-color: #F8D48B;
+}
+
+.delete-project {
+  background-color: #e79988;
+}
+
+.add-new-item,
+.add-new-project,
+.delete-project {
+  font-size: 0.5em;
+  padding: 1em;
+}
+
 .item {
+  margin-left: 3em;
   margin-bottom: 1.5em;
   animation: appear 0.7s;
   width: 90%;
