--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,10 @@ button {
 	cursor: pointer;
 }
 
+/*============================
+  header
+==============================*/
+
 header {
 	grid-area: header;
 	background-color: #f4b942;
@@ -39,6 +43,10 @@ header h1 {
 	height: 100%;
 	min-height: 100%;
 }
+
+/*============================
+  side nav
+==============================*/
 
 .side-nav {
 	background-color: #ebebeb;
@@ -80,11 +88,16 @@ header h1 {
 	background-color: #c3c3c3;
 }
 
+/*============================
+  content
+==============================*/
+
 .content {
 	background-color: #f5f5f5;
 	border-right: solid 1px rgb(49, 49, 49);
 	border-bottom: solid 1px rgb(49, 49, 49);
 	width: 100%;
+	overflow: auto;
 }
 
 .tab-panel {
@@ -115,11 +128,20 @@ header h1 {
 	padding: 1em;
 }
 
+/*============================
+  item
+==============================*/
+
 .item {
 	margin-left: 3em;
 	margin-bottom: 1.5em;
 	animation: appear 0.7s;
 	width: 90%;
+}
+
+.item--completed {
+	text-decoration: line-through;
+	color: #23ce6b;
 }
 
 .item-banner {
@@ -131,6 +153,24 @@ header h1 {
 	grid-template-columns: 0.5fr 7fr 0.2fr 0.2fr 1fr 1.5fr;
 	gap: 5px;
 	align-items: center;
+}
+
+.item-info {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: white;
+	font-size: 1em;
+	border-bottom: solid 1px black;
+	border-left: solid 1px black;
+	border-right: solid 1px black;
+	padding: 1em;
+}
+
+.item-banner--editing,
+.item-info--editing {
+	transition: 0.5s;
+	grid-template-columns: 0.5fr 4fr 1.5fr 2fr 1fr;
 }
 
 /*============================
@@ -191,18 +231,6 @@ header h1 {
 	padding: 0 1em;
 }
 
-.item-banner--editing,
-.item-info--editing {
-	transition: 0.5s;
-	grid-template-columns: 0.5fr 4fr 1.5fr 2fr 1fr;
-}
-
-.item-banner--editing input,
-.item-info--expanded input,
-.item-info--editing select {
-	font-size: 1em;
-}
-
 /*============================
   item-info--editing elements
 ==============================*/
@@ -222,32 +250,8 @@ input[type='radio']:checked + label {
 	background-color: #e79988;
 }
 
-.item-info {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: white;
-	font-size: 1em;
-	border-bottom: solid 1px black;
-	border-left: solid 1px black;
-	border-right: solid 1px black;
-	padding: 1em;
-}
-
-.item-info--expanded {
-	display: grid;
-	grid: 1fr 1fr 1fr 3fr/ 1fr 4fr;
-	gap: 0.7em 0.5em;
-	animation: fade-in 0.8s;
-}
-
 .item-project--editing {
 	width: 60%;
-}
-
-.item--completed {
-	text-decoration: line-through;
-	color: #23ce6b;
 }
 
 .hidden {
